# mpd-client

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  app.cc  button.cc  drag-handle.cc  eq-graph.cc  eq-slider.cc  eq-slider.h  equalizer.cc  equalizer.h  hslider.cc  inifile.cc  inifile.h  main.cc  main.h  menurow.cc  number.cc  playlist-slider.cc  playlist-widget.cc  playlist-widget.h  playlistwin.cc  playlistwin.h  settings.h  skin.cc  skin.h  skins_cfg.cc  skins_cfg.h  skins_util.cc  skins_util.h  svis.cc  textbox.cc  textbox.h  util.cc  util.h  vis.cc  widget.cc  window.cc  window.h
src/mpd/: deleter.hpp  mpd.cpp  mpd.hpp  playlist.cpp  playlist.hpp  song.cpp  song.hpp  status.cpp  status.hpp
